project(homework6)
cmake_minimum_required (VERSION 2.8)
cmake_policy(SET CMP0015 NEW)
find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg pcl_conversions)
find_package(PCL 1.7 REQUIRED )
add_definitions(${PCL_DEFINITIONS})
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_executable(pcl_node src/pcl_node.cpp)
target_link_libraries(pcl_node ${PCL_LIBRARIES} ${catkin_LIBRARIES})
add_dependencies(pcl_node homework6_generate_messages_cpp)
